--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
+:root {
+  --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #f7f7f7;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
+  margin: 0;
+  font-family: 'Times New Roman', Times, serif;
 }
 
-.App-link {
-  color: #61dafb;
+.App {
+  background-color: rgb(17, 17, 100);
+  margin: 30px auto;
+  width: 450px;
+  text-align: center;
+  border-radius: 8px;
+  padding-bottom: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App h1,
+p {
+  color: #f7f7f7;
+}
+.App .container-content {
+  background-color: #fff;
+  box-shadow: var(--box-shadow);
+  height: 140px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px 20px;
+  width: 400px;
+  border-radius: 8px;
+}
+
+.App .container-content p {
+  font-size: 25px;
+  color: black;
+}
+
+input {
+  width: 398px;
+  border: none;
+}
+button {
+  border: none;
+  background-color: rgb(236, 97, 120);
+  color: #fff;
+}
+
+input,
+button {
+  padding: 6.5px;
+}
+
+.correct {
+  font-weight: bold;
+  color: green;
+}
+
+.incorrect {
+  font-weight: bold;
+  color: red;
+}
+
+.active {
+  font-weight: bold;
+  color: green;
 }
